--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Objects</title>
+
+    <!-- <script type="module" src="./js/01-array.js" defer></script> -->
+    <!-- <script type="module" src="./js/02-methods.js" defer></script> -->
+    <script type="module" src="./js/03-spread-rest.js" defer></script>
   </head>
   <body></body>
 </html>
