--- a/pages/03-forms.html
+++ b/pages/03-forms.html
@@ -17,8 +17,8 @@
     <p><a href="../index.html">Go back</a></p>
 
     <form class="feedback-form js-feedback-form">
-      <input class="feedback-form-input" type="email" name="email" placeholder="Email" required />
-      <input class="feedback-form-input" type="password" name="password" placeholder="Password" required />
+      <input class="feedback-form-input" type="email" name="email" placeholder="Email" />
+      <input class="feedback-form-input" type="password" name="password" placeholder="Password" />
       <textarea class="feedback-form-message" name="comment" placeholder="Comment"></textarea>
       <button class="feedback-form-btn" type="submit">Submit</button>
     </form>
